<resources>
    <string name="app_name">Demo_ChatBot</string>

    <string name="notification_content">Demo_ChatBot正在背景執行</string>
    <string name="close">X 關閉</string>
    <string name="notification_permission_draw">點此允許顯示在其他應用上層。</string>
    <string name="notification_permission_record">點此手動開啓權限設定</string>



    <string name="dialog_permission_title">基於權限安全性，Demo_ChatBot將向您索取權限使用權。</string>
    <string name="dialog_permission_button">我瞭解了</string>


    <string name="toast_listen">我能為你做些甚麼?</string>
    <string name="toast_speech_error">請你說清楚，好嗎</string>
    <string name="toast_speech_listening">講話呀，我聽著呢!</string>

    <string name="hint_talk_board">嗨，聊聊天吧。</string>

    <!--talk board-->
    <string name="talk_board_header_bot">小三 說:</string>
    <string name="talk_board_header_user">你 說: </string>
    <string name="talk_board_thinking">●　●　●</string>

</resources>
