<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:paddingEnd="10dp"
        android:paddingStart="0dp"
        android:text="@string/close"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_bot"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_title"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/notification_content"
        android:textColor="@android:color/black"
        android:textSize="13sp" />


</RelativeLayout>