<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_talk_board_bg">

    <se.emilsjolander.stickylistheaders.StickyListHeadersListView
        android:id="@+id/sticky_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_edit"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/tv_close"
        android:layout_marginTop="30dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/shape_close_button_bg"
        android:gravity="center"
        android:text="X"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <RelativeLayout
        android:id="@+id/layout_edit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/btn_sent"
            android:hint="@string/hint_talk_board"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_sent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:background="@drawable/selector_talk_board_sent"
            android:contentDescription="@string/app_name" />


    </RelativeLayout>


    <TextView
        android:id="@+id/tv_cover"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/talk_board_thinking_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/talk_board_thinking"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone" />
</RelativeLayout>